--- a/popup.html
+++ b/popup.html
@@ -5,12 +5,81 @@
     <style>
         body {
             width: 300px;
-            padding: 15px;
+            padding: 0;
+            margin: 0;
             font-family: Arial, sans-serif;
+            background: #f5f7fa;
+        }
+        .header {
+            background: #4285f4;
+            color: white;
+            padding: 15px;
+            margin-bottom: 8px;
+        }
+        .header h2 {
+            margin: 0;
+            font-size: 18px;
+        }
+        .content {
+            padding: 0 15px 8px;
         }
         .instructions {
             line-height: 1.5;
             color: #333;
+            background: #fff;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            margin-bottom: 8px;
+        }
+        .instructions p {
+            margin: 4px 0;
+        }
+        .section {
+            background: #fff;
+            padding: 12px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            margin-bottom: 4px;
+        }
+        h3 {
+            margin-top: 0;
+            color: #4285f4;
+            font-size: 16px;
+            margin-bottom: 4px;
+        }
+        .radio-group {
+            display: flex;
+            flex-direction: column;
+            gap: 0;
+        }
+        .radio-group label {
+            display: flex;
+            align-items: center;
+            padding: 3px;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.2s;
+        }
+        .radio-group label:hover {
+            background-color: #f0f4f8;
+        }
+        .radio-group input[type="radio"] {
+            margin-right: 8px;
+        }
+        .close-button {
+            display: block;
+            width: 100%;
+            padding: 12px;
+            background: #4285f4;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-size: 14px;
+            transition: background-color 0.2s;
+        }
+        .close-button:hover {
+            background: #3367d6;
         }
         kbd {
             background-color: #f7f7f7;
@@ -107,85 +176,65 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <div class="instructions">
-        <h3>How to use:</h3>
-        <p>1. Hover your mouse over any text</p>
-        <p>2. See AI-generated summary in a tooltip</p>
-        <p>3. Press ESC to close the tooltip</p>
+    <div class="header">
+        <h2>Smart Content Summarizer</h2>
     </div>
-    <div class="language-level">
-        <h3>Language Level</h3>
-        <div class="radio-group">
-            <label>
-                <input type="radio" name="languageLevel" value="beginner">
-                Beginner
-            </label>
-            <label>
-                <input type="radio" name="languageLevel" value="intermediate" checked>
-                Intermediate
-            </label>
-            <label>
-                <input type="radio" name="languageLevel" value="advanced">
-                Advanced
-            </label>
+    <div class="content">
+        <div class="instructions">
+            <h3>How to use:</h3>
+            <p>1. Hover your mouse over any text</p>
+            <p>2. See AI-generated summary in a tooltip</p>
+            <p>3. Press ESC to close the tooltip</p>
         </div>
-    </div>
-    <div class="sound-settings">
-        <h3>Voice Options</h3>
-        <div class="radio-group">
-            <label>
-                <input type="radio" name="voiceOption" value="none" checked>
-                No Voice
-            </label>
-            <label>
-                <input type="radio" name="voiceOption" value="male">
-                Male Voice
-            </label>
-            <label>
-                <input type="radio" name="voiceOption" value="female">
-                Female Voice
-            </label>
-        </div>
-    </div>
-    <div class="api-key-section">
-        <h3>Settings</h3>
-        <div class="api-options">
-            <div class="option-toggle">
+        <div class="section site-settings">
+            <h3>Site Settings</h3>
+            <div class="radio-group">
                 <label>
-                    <input type="radio" name="api-option" value="own" checked> 
-                    Use my own API key
+                    <input type="radio" name="siteScope" value="current" checked>
+                    This Site Only
                 </label>
                 <label>
-                    <input type="radio" name="api-option" value="subscription"> 
-                    Subscribe to our service
+                    <input type="radio" name="siteScope" value="all">
+                    All Sites
                 </label>
             </div>
         </div>
-        
-        <div id="ownKeySection" class="api-input-section active">
-            <label for="apiKey">Groq API Key:</label>
-            <input type="text" id="apiKey" placeholder="Enter your Groq API key">
-            <div class="save-key-container">
-                <a href="https://console.groq.com/keys" target="_blank" class="get-key-link">
-                    Get a free API key from Groq
-                </a>
-                <button id="saveKey">Save</button>
+        <div class="section language-level">
+            <h3>Language Level</h3>
+            <div class="radio-group">
+                <label>
+                    <input type="radio" name="languageLevel" value="beginner">
+                    Beginner
+                </label>
+                <label>
+                    <input type="radio" name="languageLevel" value="intermediate" checked>
+                    Intermediate
+                </label>
+                <label>
+                    <input type="radio" name="languageLevel" value="advanced">
+                    Advanced
+                </label>
             </div>
         </div>
-        
-        <div id="subscriptionSection" class="api-input-section">
-            <div class="subscription-info">
-                <p>Subscribe to use our service:</p>
-                <ul>
-                    <li>No need to manage API keys</li>
-                    <li>Unlimited summaries</li>
-                    <li>Priority support</li>
-                </ul>
-                <p class="price">$4.99/month</p>
+        <div class="section sound-settings">
+            <h3>Voice Options</h3>
+            <div class="radio-group">
+                <label>
+                    <input type="radio" name="voiceOption" value="none" checked>
+                    No Voice
+                </label>
+                <label>
+                    <input type="radio" name="voiceOption" value="male">
+                    Male Voice
+                </label>
+                <label>
+                    <input type="radio" name="voiceOption" value="female">
+                    Female Voice
+                </label>
             </div>
-            <button id="subscribe">Subscribe Now</button>
         </div>
     </div>
+    <button class="close-button" id="closeButton">Close</button>
     <script src="popup.js"></script>
 </body>
 </html> 
